# alphazerolight

./: .gitignore  BRANCH_STATUS.md  CONNECT4_MIGRATION_COMPLETE.md  CRITICAL_BUG_FIXED.md  CRITICAL_MCTS_TERMINAL_BUG_FIXED.md  INVESTIGATION_REPORT.json  LEARNING_FROM_WINS_LOSSES.md  PROJECT_DOCUMENTATION.json  PROJECT_STRUCTURE.md  README.md  SESSION_SUMMARY.json  TRAINING_DOCUMENTATION.md  TRAINING_QUICKSTART.md  analyze_training_data.py  build_viewer.sh  check_training.sh  check_training_data.py  clean_checkpoints.sh  comprehensive_sign_check.py  custom_tournament.py  debug_mcts_trace.py  debug_terminal_values.py  env_config.sh  imgui.ini  launch_training_final.sh  launch_training_with_monitors.sh  model_test_results_OLD.json  model_test_results_OLD_ENCODING_BUG.json  model_test_results_old_20251214_235256.json  monitor_eval.sh  monitor_full.sh  monitor_training.sh  pause_training.sh  play_connect4.py  project.json  requirements.txt  resume_training.sh  run_app.sh  run_phase5_7.sh  run_training.sh  (+22 more)
alpha_zero_light/: config.py  config_connect4.py
alpha_zero_light/game/: connect_four.py
alpha_zero_light/mcts/: mcts_cpp.cpp
alpha_zero_light/training/: heuristic_opponent.py  trainer.py
apps/connect4-lab/: README.md  index.html
apps/website/: dashboard.html  guide.html  index.html  status.json
artifacts/: README.md
artifacts/binaries/: test_omp
connect4-lab/: index.html  setup.sh
cpp_viewer/: CMakeLists.txt  README.md
cpp_viewer/src/: main.cpp  render_board.cpp  render_board.h  render_metrics.cpp  render_metrics.h  render_network.cpp  render_network.h  render_thinking.cpp  render_thinking.h  telemetry_client.cpp  telemetry_client.h
data/: selfplay_1k_fixed.npz  selfplay_1k_fixed_labeled.npz  selfplay_42k.npz  selfplay_42k_fixed.npz  selfplay_42k_labeled.npz  selfplay_500_diverse.npz  selfplay_500_diverse_labeled.npz  selfplay_labeled_2k.npz  selfplay_positions_2k.npz
debug/: README.md
docs/: GOMOKU_IMPLEMENTATION.md  MODEL_STORAGE.md  TRAINING_DOCUMENTATION.md  TRAINING_ISSUES_AND_SOLUTIONS.md  VISUALIZATION_ROADMAP.json  evolution_replay.json
experiments/: evaluate_training.py  monitor_training.py
paper_materials/: RESULTS_TEMPLATE.md
scripts/: benchmark_gpu.py  generate_evolution_replay.py  manage_training.py  play_gomoku.py  quick_eval_puzzles.py  run_train.py  serve_website.py  stress_test_full.py  stress_test_gpu.py  test_connect4.py  test_edge_wins.py  test_mcts_blocking.py  test_model_progress.py  train_connect4.py  train_gomoku.py  train_gomoku_9x9.py  train_gomoku_9x9_overnight.py  train_gpu_test.py  train_with_monitoring.py  update_dashboard.py  visualize_training.py
training_package/: README.md  eval_quick.py  train_gomoku_long.py
website/: script.js  status.json  styles.css
(+115 files in other folders)
